--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <ol>
         <li></li>
         <li></li>
-        
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa possimus impedit placeat deleniti ipsum recusandae libero quo rerum animi amet!</h1>
+        <img src="" alt="gambar">
     </ol>
 </body>
 </html>
