--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <li></li>
         <li></li>
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa possimus impedit placeat deleniti ipsum recusandae libero quo rerum animi amet!</h1>
-        <img src="" alt="gambar">
+        <img src="" alt ="gambar">
     </ol>
+
+
+    <p>
+        ppppppp <br> ppppp
+    </p>
 </body>
 </html>
