edit and add lorem

--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
         <li></li>
         <li></li>
         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa possimus impedit placeat deleniti ipsum recusandae libero quo rerum animi amet!</h1>
-<<<<<<< HEAD
-        <img src="" alt ="gambar">
-    </ol>
 
-
-    <p>
-        ppppppp <br> pppppppp
-    </p>
-=======
         <img src="" alt="gambar">
 
 
@@ -31,6 +23,8 @@
         <li></li>
     </ol>
     <p>TESTING ZUHAL!!!</p>
->>>>>>> 3ae0704c1467413dd96f97a0c47a91bf811f8573
+
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit voluptate excepturi earum, sapiente sunt ducimus repellat assumenda recusandae aperiam alias.</p>
 </body>
 </html>
