--- a/Thoriq.html
+++ b/Thoriq.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Nama : Fadhlih Thoriqi</h1>
     <h1>NIM : 23121012</h1>
+    <h1>Belum paham cara commit gagal terus, coba via upload</h1>
 </body>
 </html>
